# pyserpZotero

./: .gitignore  LICENSE  QuickStart.ipynb  README.md  all_google_api_citations.json  arxiv_download.ipynb  auto_cite.bib  auto_cite_static.bib  build  citeDemo.ipynb  cleanZot POC.ipynb  cleanZot.py  config.yaml  main.py  pyproject.toml  pyserpCite POC.ipynb  pyserpZotero.py  quickstart.ipynb  quickstartDemo.ipynb  requirements.txt  scholar_search_results.json
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml
.ipynb_checkpoints/: cleanZot POC-checkpoint.ipynb  config-checkpoint.yaml  pyserpCite-checkpoint.py  requirements-checkpoint.txt
deprecated/: auto_cite.bib  main.py  pyserpCite POC.ipynb
docs/: conf.py  index.rst  introduction.rst  license.rst
docs/modules/: arxiv_helpers.rst  helpers.rst  pyserpzotero.rst
pyserpZotero/: README.md  all_google_api_citations.json  auto_cite.bib  book.txt  book.yaml  config.yaml  pyserpZotero.py  quickstartDemo.ipynb  results.json  ris_results.txt  scholar_search_results.json
pyserpZotero/docs/source/: index.rst
src/pyserpZotero/: .gitignore  LICENSE  README.md  __init__.py  arxiv_helpers.py  auto_cite.bib  config.yaml  helpers.py  pyserpZotero.py  quickstart.ipynb  requirements.txt
src/pyserpZotero/.ipynb_checkpoints/: README-checkpoint.md  cleanZot-checkpoint.py
src/pyserpZotero/ai/: ai.py
src/pyserpZotero/docs/: .readthedocs.yaml
src/pyserpZotero/ui/: colors.py
src/pyserpZotero/utils/: __init__.py  arxiv_helpers.py  helpers.py  pdf_downloader.py  process_and_upload.py  search2zotero.py  (+1 more)
(+3 files in other folders)
